# 2025-11-swafe

./: .gitignore  README-sponsor.md  README.md  justfile  out_of_scope.txt  scope.txt
api/: Cargo.toml  deny.toml
api/src/: init.rs
api/src/account/: get.rs
api/src/association/: get_secret_share.rs  mod.rs  upload_msk.rs
api/src/association/vdrf/: eval.rs
api/src/reconstruction/: get_shares.rs  mod.rs  upload_share.rs
cli/: Cargo.toml  README.md
cli/src/: main.rs
cli/src/commands/: account.rs  association.rs  backup.rs  mod.rs  reconstruction.rs  utils.rs  vdrf.rs
contracts/: Cargo.toml  deny.toml
contracts/java-test/: .classpath  .project  pom.xml
contracts/java-test/src/test/java/com/partisia/blockchain/contract/: AccountManager.java  AssociationWorkflow.java  BackupWorkflow.java  CliHelper.java  KeyManager.java  SwafeContractTest.java  TestAccountGet.java  VdrfSetup.java
contracts/java-test/src/test/resources/: logback-test.xml
contracts/src/: lib.rs  storage.rs
contracts/src/http/: error.rs  json.rs  mod.rs
contracts/src/http/endpoints/: init.rs  mod.rs
contracts/src/http/endpoints/account/: get.rs  mod.rs
contracts/src/http/endpoints/association/: get_secret_share.rs  mod.rs  upload_msk.rs
contracts/src/http/endpoints/association/vdrf/: eval.rs  mod.rs
contracts/src/http/endpoints/reconstruction/: get_shares.rs  mod.rs  upload_share.rs
integration-test/: conf.json.example  docker-compose.yml  test_vdrf_workflow.sh
lib/: Cargo.toml  deny.toml
lib/src/: encode.rs  errors.rs  lib.rs  node.rs  types.rs  venum.rs
lib/src/account/: mod.rs  tests.rs  v0.rs
lib/src/association/: mod.rs  v0.rs
lib/src/backup/: mod.rs  tests.rs  v0.rs
lib/src/crypto/: commitments.rs  curve.rs  email_cert.rs  hash.rs  mod.rs  pairing.rs  poly.rs  sss.rs  symmetric.rs  vdrf.rs
lib/src/crypto/pke/: mod.rs  v0.rs
lib/src/crypto/sig/: mod.rs  v0.rs
