[package]
name = "swafe-lib"
version = "0.1.0"
edition = "2021"
authors = []
description = ""

[features]
default = []

[dependencies]
# Arkworks ecosystem for elliptic curves and cryptographic operations
ark-std = { version = "0.5" }
ark-ff = { version = "0.5" }
ark-ec = { version = "0.5" }
ark-serialize = { version = "0.5" }
ark-bls12-381 = { version = "0.5" }
ark-ed25519 = { version = "0.5" }

# Cryptographic primitives
sha3 = { version = "0.10" }
sha3-kmac = "0.3.0"
zeroize = { version = "1.8.1", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
bincode = { version = "2.0", features = ["serde"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# CLI
hex = "0.4"
clap = { version = "4.0", features = ["derive"] }
subtle = "2.6.1"
serde-big-array = "0.5.1"
serde_with = "3.14.0"
base64 = { version = "0.22.1", default-features = false, features = ["alloc"] }

[dev-dependencies]
hex = "0.4"
serde_json = "1.0" # partisia
rand = "0.8"
